--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -143,10 +143,11 @@
   </div>
   <button class="btn btn--active balance__title-btn" (click)="closeSendQuberaPopup.emit(true)">OK</button>
   <div class="notice-block">
-    <span class="head-notice">Напоминаем:</span>
+    <span class="head-notice">{{'Please note:' | translate}}</span>
     <ul>
       <li>
-        <span>Это реквизиты вашего личного счёта в FUG теперь вы можете пополнять свой счёт и без комиссии  переводить деньги между вашим личным счетом и торговым счетом на Exrates.
+        <span>
+          {{'Those are your FUG account details. Now you can make a deposit and transfer your funds to/from your Exrates trading account without a commission.' | translate }}
         </span>
       </li>
     </ul>
