--- a/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
+++ b/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
@@ -34,7 +34,7 @@
         [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
         (click)="onSelectTab.emit(Tab.QUBERA)"
       >
-        {{'Qubera' | translate}}
+        {{'FUG' | translate}}
       </button>
 
       <button
