--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -4,19 +4,23 @@
     <form [formGroup]="form">
       <div class="main-form">
         <div class="select refill__select" style="display: inline-block;">
-          <div class="select__value select__value--active"
-              (click)="toggleCurrencyDropdown()"
-              [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}">
+          <div
+            class="select__value select__value--active"
+            (click)="toggleCurrencyDropdown()"
+            [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
+          >
             <img [src]="activeFiat.name | getIconUrl:true" class="select__list-item-icon select__list-item-icon--mobile">
-              <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon select__list-item-icon--destop">
-              {{activeFiat?.name}}
-            </div>
-            <div class="select__label">{{'Currency' | translate}}</div>
-            <div class="select__line"></div>
-            <div class="select__triangle"></div>
-          <ul class="select__list"
-              [ngClass]="{'select__list--open': openCurrencyDropdown}"
-              *ngIf="openCurrencyDropdown">
+            <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon select__list-item-icon--destop">
+            {{activeFiat?.name}}
+          </div>
+          <div class="select__label">{{'Currency' | translate}}</div>
+          <div class="select__line"></div>
+          <div class="select__triangle"></div>
+          <ul
+            class="select__list"
+            [ngClass]="{'select__list--open': openCurrencyDropdown}"
+            *ngIf="openCurrencyDropdown"
+          >
             <li class="select__list-item" *ngFor="let currency of fiatNames" (click)="selectCurrency(currency)">
               <img [src]="currency.name | getIconUrl" class="select__list-item-icon">
               {{currency?.name}}
@@ -25,90 +29,43 @@
         </div>
 
         <div class="select refill__select" style="display: inline-block;">
-            <div class="select__value select__value--active" (click)="togglePaymentSystemDropdown()">
-                {{selectedWithdraw}}
-            </div>
-            <div class="select__label">{{'Payment system' | translate}}</div>
-            <div class="select__line"></div>
-            <div class="select__triangle"></div>
-            <ul class="select__list"
-                [ngClass]="{'select__list--open': openBankSystemDropdown}"
-                *ngIf="openBankSystemDropdown">
-              <li class="select__list-item" *ngFor="let withdrawOption of withdrawOptions" (click)="checkForm(withdrawOption)">
-                {{withdrawOption}}
-              </li>
-            </ul>
-          </div>
-
-        <!-- <div class="select refill__select" *ngIf="selectedMerchant">
-          <div class="select__value select__value--active"
-                (click)="togglePaymentSystemDropdown()">
-            <img [src]="selectMerchantName | getIconUrl" class="select__list-item-icon">
-            {{selectMerchantName}}
+          <div class="select__value select__value--active" (click)="togglePaymentSystemDropdown()">
+            {{selectedWithdraw}}
           </div>
           <div class="select__label">{{'Payment system' | translate}}</div>
           <div class="select__line"></div>
           <div class="select__triangle"></div>
-          <div class="select__list-searching"
-                [ngClass]="{'select__list-searching--open': openBankSystemDropdown}"
-                *ngIf="openBankSystemDropdown">
-            <div class="select__search">
-              <input class="select__search-input" type="text" placeholder="Search" (input)="searchMerchant($event)">
-              <div class="select__search-icon">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
-                </svg>
-              </div>
-            </div>
-            <ul class="select__list select__list--open">
-              <ng-template ngFor let-merchant [ngForOf]="merchants">
-                <li class="select__list-item"
-                    *ngFor="let nested of merchant.listMerchantImage | merchantImageFilter: searchTemplate"
-                    (click)="selectMerchant(merchant, nested)">
-                  <img [src]="nested.image_name | getIconUrl" class="select__list-item-icon">
-                  {{nested.image_name}}
-                </li>
-              </ng-template>
-            </ul>
-          </div>
-        </div> -->
-
-      <div class="wrap-input"
-        [ngClass]="{'wrap-input--error': form.get('amount').invalid && (form.get('amount').touched || isSubmited)}"
-        >
-        <div class="avaliable">{{'Available:' | translate}}
-          <a (click)="balanceClick(quberaBalances.availableBalance.amount)" class="link">
-            {{quberaBalances.availableBalance.amount | roundCurrency: true | formatCurrency: 'short': true}} {{quberaBalances.availableBalance.currencyCode}}
-          </a>
+          <ul
+            class="select__list"
+            [ngClass]="{'select__list--open': openBankSystemDropdown}"
+            *ngIf="openBankSystemDropdown"
+          >
+            <li class="select__list-item" *ngFor="let withdrawOption of withdrawOptions" (click)="checkForm(withdrawOption)">
+              {{withdrawOption}}
+            </li>
+          </ul>
         </div>
-        <app-price-input  style="display: inline-block;"
-          [placeholder]="'Amount'"
-          formControlName="amount"
-          (customInput)="amountInput($event)"
-          (customBlur)="amountBlur($event)"
-          name="amount"
-          class="fiat-amount"
-          >
 
-        </app-price-input>
-        <span class=" wrap-input__message--show">
-          {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{currName}}
-        </span>
-        <span
-            class=" wrap-input__message--show"
-            *ngIf="form.controls['amount'].errors &&
-                  !form.controls['amount'].errors['isMinThenMinWithdraw'] &&
-                  !form.controls['amount'].errors['isMaxThenActiveBalance']"
-          >
-            {{
-              'Minimum sum for withdrawal' | translate
-            }} {{
-              minWithdrawSum | roundCurrency: true | formatCurrency: 'short': true
-            }} {{
-              currName
-            }}
+        <div class="wrap-input"
+          [ngClass]="{'wrap-input--error': form.get('amount').invalid && (form.get('amount').touched || isSubmited)}"
+        >
+          <div class="avaliable">{{'Available:' | translate}}
+            <a (click)="balanceClick(quberaBalances.availableBalance.amount)" class="link">
+              {{quberaBalances.availableBalance.amount | roundCurrency: true | formatCurrency: 'short': true}} {{quberaBalances.availableBalance.currencyCode}}
+            </a>
+          </div>
+          <app-price-input  style="display: inline-block;"
+            [placeholder]="'Amount'"
+            formControlName="amount"
+            (customInput)="amountInput($event)"
+            (customBlur)="amountBlur($event)"
+            name="amount"
+            class="fiat-amount"
+          ></app-price-input>
+          <span class="wrap-input__message--show" *ngIf="form.get('amount').errors != null">
+            {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum | currencyFormat: currName}} {{currName}}
           </span>
+
 
           <!--Input error section starts-->
           <div *ngIf="form.get('amount').errors != null">
@@ -116,13 +73,14 @@
               <span
                 class=" wrap-input__message--show"
                 *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-                [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] &&
-                            (form.controls['amount'].touched || isSubmited)}"
+                [ngClass]="
+                  {'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] &&
+                    (form.controls['amount'].touched || isSubmited)}"
               >
                 {{
                   'Minimum sum for withdrawal' | translate
                 }} {{
-                  minWithdrawSum | roundCurrency: currName | formatCurrency: 'short': currName
+                  minWithdrawSum | currencyFormat: currName
                 }} {{
                   currName
                 }}
@@ -134,7 +92,7 @@
                 {{
                   'Your available balance:' | translate
                 }} {{
-                  activeBalance | roundCurrency: currName | formatCurrency: 'short': currName
+                  activeBalance | currencyFormat: currName
                 }} {{
                   currName
                 }}
@@ -169,11 +127,11 @@
           <label class="wrap-input__label" for="firstName">{{'First name' | translate}}</label>
           <ng-container *ngIf="!currentSEPAFirstName.valid && !currentSEPAFirstName.untouched">
             <div class="input-hint-wrapper">
-                <span
-                  class="wrap-input__message"
-                  *ngIf="!currentSEPAFirstName.valid">
-                  {{'First Name field is required.' | translate}}
-                </span>
+              <span
+                class="wrap-input__message"
+                *ngIf="!currentSEPAFirstName.valid">
+                {{'First Name field is required.' | translate}}
+              </span>
             </div>
           </ng-container>
         </div>
@@ -186,11 +144,11 @@
           <label class="wrap-input__label" for="lastName">{{'Last name' | translate}}</label>
           <ng-container *ngIf="!currentSEPALastName.valid && !currentSEPALastName.untouched">
             <div class="input-hint-wrapper">
-                <span
-                  class="wrap-input__message"
-                  *ngIf="!currentSEPALastName.valid">
-                  {{'Last Name field is required.' | translate}}
-                </span>
+              <span
+                class="wrap-input__message"
+                *ngIf="!currentSEPALastName.valid">
+                {{'Last Name field is required.' | translate}}
+              </span>
             </div>
           </ng-container>
         </div>
@@ -203,11 +161,11 @@
           <label class="wrap-input__label" for="companyName">{{'Company name' | translate}}</label>
           <ng-container *ngIf="!currentSEPAACompanyName.valid && !currentSEPAACompanyName.untouched">
           <div class="input-hint-wrapper">
-              <span
-                class="wrap-input__message"
-                *ngIf="!currentSEPAACompanyName.valid">
-                  {{'Company name field is required.' | translate}}
-              </span>
+            <span
+              class="wrap-input__message"
+              *ngIf="!currentSEPAACompanyName.valid">
+                {{'Company name field is required.' | translate}}
+            </span>
             </div>
           </ng-container>
         </div>
@@ -228,14 +186,14 @@
           <input class="wrap-input__input" type="text" name="iban" formControlName="iban" required>
           <label class="wrap-input__label" for="iban">{{'Iban' | translate}}</label>
           <ng-container *ngIf="!currentSEPAIban.valid && !currentSEPAIban.untouched">
-        <div class="input-hint-wrapper">
-           <span
-             class="wrap-input__message"
-             *ngIf="!currentSEPAIban.valid">
-              {{'Iban field is required.' | translate}}
-           </span>
-        </div>
-      </ng-container>
+            <div class="input-hint-wrapper">
+              <span
+                class="wrap-input__message"
+                *ngIf="!currentSEPAIban.valid">
+                  {{'Iban field is required.' | translate}}
+              </span>
+            </div>
+          </ng-container>
         </div>
       </div>
       <button class="btn balance__title-btn"
@@ -256,11 +214,11 @@
           <label class="wrap-input__label" for="firstname">{{'First name' | translate}}</label>
           <ng-container *ngIf="!currentSWIFTFirstName.valid && !currentSWIFTFirstName.untouched">
             <div class="input-hint-wrapper">
-                <span
-                  class="wrap-input__message"
-                  *ngIf="!currentSWIFTFirstName.valid">
-                  {{'First name is required.' | translate}}
-                </span>
+              <span
+                class="wrap-input__message"
+                *ngIf="!currentSWIFTFirstName.valid">
+                {{'First name is required.' | translate}}
+              </span>
             </div>
           </ng-container>
         </div>
@@ -303,11 +261,11 @@
           <label class="wrap-input__label" for="accountNumber">{{'Account number' | translate}}</label>
           <ng-container *ngIf="!currentSWIFTAccountNumbere.valid && !currentSWIFTAccountNumbere.untouched">
             <div class="input-hint-wrapper">
-                <span
-                  class="wrap-input__message"
-                  *ngIf="!currentSWIFTAccountNumbere.valid">
-                  {{'Account number is required.' | translate}}
-                </span>
+              <span
+                class="wrap-input__message"
+                *ngIf="!currentSWIFTAccountNumbere.valid">
+                {{'Account number is required.' | translate}}
+              </span>
             </div>
           </ng-container>
         </div>
@@ -316,11 +274,11 @@
           <label class="wrap-input__label" for="swift">{{'Swift' | translate}}</label>
           <ng-container *ngIf="!currentSWIFTNumber.valid && !currentSWIFTNumber.untouched">
             <div class="input-hint-wrapper">
-                <span
-                  class="wrap-input__message"
-                  *ngIf="!currentSWIFTNumber.valid">
-                  {{'Swift field is required.' | translate}}
-                </span>
+              <span
+                class="wrap-input__message"
+                *ngIf="!currentSWIFTNumber.valid">
+                {{'Swift field is required.' | translate}}
+              </span>
             </div>
           </ng-container>
         </div>
