--- a/src/assets/scss/components/_side-popups.scss
+++ b/src/assets/scss/components/_side-popups.scss
@@ -336,7 +336,14 @@
     color: #fff;
   }
   .qubera-content{
-
+.inf-code {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 30px;
+}
     .choose-block {
       margin-top: 10px;
       margin-bottom: 20px;
@@ -487,10 +494,10 @@
 
     }
     .secundary-form {
-    .input-block{
-      margin: 0 0 20px;
-    }
-      .select{
+      .input-block{
+        margin: 0 0 20px;
+      }
+      &+.select{
         width: calc(50% - 15px);
       }
     }
