--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -45,7 +45,30 @@
                     'arr--green': item.sourceType === 'REFILL'
                   }"
                 ></span>
-                <span>{{item.sourceType === 'REFILL' ? 'Refill' : item.sourceType === 'WITHDRAW' ? 'Withdraw' : item.sourceType}}</span>
+                <span
+                  class="txt-green"
+                  *ngIf="item.sourceType === 'REFILL'"
+                >{{item.sourceType | showTransactionsType: item}}</span>
+                <span
+                  class="txt-red"
+                  *ngIf="item.sourceType === 'WITHDRAW'"
+                >{{item.sourceType | showTransactionsType: item}}</span>
+                <span
+                  class="txt-green"
+                  *ngIf="item.sourceType === 'USER_TRANSFER' && item.accepted"
+                >{{item.sourceType | showTransactionsType: item}}</span>
+                <span
+                  class="txt-red"
+                  *ngIf="item.sourceType === 'USER_TRANSFER' && !item.accepted"
+                >{{item.sourceType | showTransactionsType: item}}</span>
+                <span
+                  class="txt-green"
+                  *ngIf="item.sourceType === 'IEO' && item.operationType === 'Input'"
+                >{{item.sourceType | showTransactionsType: item}}</span>
+                <span
+                  class="txt-red"
+                  *ngIf="item.sourceType === 'IEO' && item.operationType === 'Output'"
+                >{{item.sourceType | showTransactionsType: item}}</span>
               </div>
               <div class="balance__request-mob-date">
                 <div>{{item.datetime | amFromUtc | amLocal | amDateFormat: 'dd DD.MM.YYYY'}}</div>
@@ -59,7 +82,7 @@
               </div>
             </td>
             <td class="table__cell table__cell--tar">
-              <div class="txt-red">{{item.amount | roundCurrency:item.currencyName | formatCurrency}}</div>
+              <div class="txt-red">{{item.amount | currencyFormat:item.currencyName}}</div>
             </td>
             <td class="table__cell table__cell--arr-mob">
               <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -76,7 +99,7 @@
             <td class="table__details-cell" colspan="4">
               <div class="table__details-item">
                 <div class="table__details-item-title">{{'Comission' | translate}}</div>
-                <div class="table__details-item-value">{{item.commissionAmount | roundCurrency: item.currencyName | formatCurrency}}</div>
+                <div class="table__details-item-value">{{item.commissionAmount | currencyFormat: item.currencyName}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">{{'Payment system' | translate}}</div>
@@ -289,20 +312,20 @@
             </div>
           </td>
           <td class="table__cell">
-            <span>{{item.commissionAmount| roundCurrency: item.currencyName | formatCurrency}}</span>
+            <span>{{item.commissionAmount| currencyFormat: item.currencyName}}</span>
           </td>
           <td class="table__cell">
-            <span>{{item.amount | roundCurrency: item.currencyName | formatCurrency}}</span>
+            <span>{{item.amount | currencyFormat: item.currencyName}}</span>
           </td>
           <td class="table__cell">
             <span
               class="txt-green"
               *ngIf="item.sourceType === 'REFILL'"
-            >{{item.sourceType | showTransactionsType}}</span>
+            >{{item.sourceType | showTransactionsType: item}}</span>
             <span
               class="txt-red"
               *ngIf="item.sourceType === 'WITHDRAW'"
-            >{{item.sourceType | showTransactionsType}}</span>
+            >{{item.sourceType | showTransactionsType: item}}</span>
             <span
               class="txt-green"
               *ngIf="item.sourceType === 'USER_TRANSFER' && item.accepted"
@@ -314,11 +337,11 @@
             <span
               class="txt-green"
               *ngIf="item.sourceType === 'IEO' && item.operationType === 'Input'"
-            >{{item.sourceType | showTransactionsType}}</span>
+            >{{item.sourceType | showTransactionsType: item}}</span>
             <span
               class="txt-red"
               *ngIf="item.sourceType === 'IEO' && item.operationType === 'Output'"
-            >{{item.sourceType | showTransactionsType}}</span>
+            >{{item.sourceType | showTransactionsType: item}}</span>
           </td>
           <td class="table__cell">
             <span>{{item.transactionHash}}</span>
