refactor side modal

--- a/src/app/funds/balance/qubera-popup/create-qubera/step-one-qubera/step-one-qubera.component.html
+++ b/src/app/funds/balance/qubera-popup/create-qubera/step-one-qubera/step-one-qubera.component.html
@@ -7,7 +7,7 @@
         <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
       </div>
     </div>
-    <div class="modal__content qubera-content create-qubera">
+    <div class="modal__content qubera-content create-qubera create-qubera-s1">
       <div class="fiat-deposit-s1 fiat-transfer ">
         <h2>{{'Confirmation account creation' | translate}}</h2>
       <!-- <div class="inf-code" *ngIf="!googleAuthenticator">{{'Please enter two-factor authentication code that was sent to your email' | translate}}</div>
