--- a/src/app/funds/balance/qubera-popup/create-qubera/step-two-qubera/step-two-qubera.component.html
+++ b/src/app/funds/balance/qubera-popup/create-qubera/step-two-qubera/step-two-qubera.component.html
@@ -1,4 +1,4 @@
-<div class="modal__content qubera-content">
+<div class="modal__content qubera-content create-qubera-s2">
     <h2>{{'Account created successfully' | translate}}</h2>
     <button
       class="btn btn--center" (click)="closeQuberaPopup.emit(true)">
