--- a/src/app/funds/balance/qubera-popup/qubera-kyc/step-one/step-one.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-kyc/step-one/step-one.component.html
@@ -1,3 +1,4 @@
+<div class="qubera-kyc-s1">
 <h2>{{'Create account FUG' | translate}}</h2>
 <h3>{{'The information you fill in must be co consistent with the information in ID documents.' | translate}}</h3>
 
@@ -137,3 +138,4 @@
     </div>
 
 </form>
+</div>
