--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -1,4 +1,4 @@
-<div class="modal__content qubera-content side-popups">
+<div class="modal__content qubera-content side-popups qubera-withdraw-s1">
   <div class="fiat-deposit-s1 fiat-withdraw-s1" *ngIf="!!activeFiat && !!fiatDataByName">
     <h2>Fiat Withdrawal EUR</h2>
     <form [formGroup]="form">
