--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="activeCrypto">
+<div *ngIf="activeCrypto" class="refill-cripto">
 <div class="title refill__title">
   {{'Crypto deposit' | translate}}
   <span>{{activeCrypto.name}}</span>
