--- a/src/app/funds/balance/send-money/send-step-one/send-step-one.component.html
+++ b/src/app/funds/balance/send-money/send-step-one/send-step-one.component.html
@@ -1,3 +1,4 @@
+<div class="send-s1">
 <div class="title modal__title">{{'Send money' | translate}}</div>
 <div class="subtitle modal__subtitle">
   <p>{{'How would you like to send the money?' | translate}}</p>
@@ -16,3 +17,4 @@
         (click)="onChooseSend(INNER_TRANSFER)"
 >{{'Inner transfer' | translate}}
 </button>
+</div>
