--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!!activeCrypto && !!activeBalance" class="side-popups">
+<div *ngIf="!!activeCrypto && !!activeBalance" class="side-popups send-instant-s3">
 <div class="title send__title">{{'Make Inner transfer by email' | translate}}</div>
 <div class="formWraper" *ngIf="isEnterData">
   <form [formGroup]="form">
