--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!!activeCrypto && !!activeBalance" class="side-popups">
+<div *ngIf="!!activeCrypto && !!activeBalance" class="side-popups send-protected-s3">
 <div class="title send__title">{{'Make Inner transfer protected by code' | translate}}</div>
 <div class="formWraper" *ngIf="isEnterData">
   <div class="subtitle send__subtitle">{{' the code will be sent to you after transaction verification ' | translate}}</div>
