--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!!activeCrypto && !!cryptoInfoByName" class="side-popups">
+<div *ngIf="!!activeCrypto && !!cryptoInfoByName" class="side-popups send-cripto-s2">
   <div class="title send__title">{{'Crypto Withdrawal' | translate}}
     <span>{{currName}}</span>
   </div>
