--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -1,54 +1,83 @@
 <!--orders-mob start-->
-<cdk-virtual-scroll-viewport style="height: 227px;" itemSize="50">
+<cdk-virtual-scroll-viewport
+  style="height: 227px;"
+  itemSize="50"
+>
   <table class="table table--mob open-orders--mob">
     <thead class="table__head">
       <tr class="table__head-row">
         <th class="table__cell-head table__cell-head--tal">{{'Pair / Date' | translate}}
-          <svg class="table__cell-head-arr" style="margin: 0 0 0 4px;" width="6" height="8" viewBox="0 0 6 8" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z" />
-        </svg>
-      </th>
-      <th class="table__cell-head table__cell-head--tal">{{'Amount' | translate}}</th>
-      <th class="table__cell-head table__cell-head--tar">{{'Limit Price' | translate}}</th>
-      <th class="table__cell-head table__cell--arr-mob"><img class="" src="../../assets/img/arr-toggler-down-blue.svg" style="opacity: 0"></th>
-    </tr>
-  </thead>
-  <tbody class="table__body table__body--none-shadow">
-    <!-- t-row start-->
+          <svg
+            class="table__cell-head-arr"
+            style="margin: 0 0 0 4px;"
+            width="6"
+            height="8"
+            viewBox="0 0 6 8"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z"
+            />
+          </svg>
+        </th>
+        <th class="table__cell-head table__cell-head--tal">{{'Amount' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tar">{{'Limit Price' | translate}}</th>
+        <th class="table__cell-head table__cell--arr-mob"><img
+            class=""
+            src="../../assets/img/arr-toggler-down-blue.svg"
+            style="opacity: 0"
+          ></th>
+      </tr>
+    </thead>
+    <tbody class="table__body table__body--none-shadow">
+      <!-- t-row start-->
 
-    <!--<ng-container *ngIf="openOrders?.length !== 1">-->
+      <!--<ng-container *ngIf="openOrders?.length !== 1">-->
       <!--<ng-container *cdkVirtualFor="let item of openOrders">-->
-        <!--<ng-template-->
-          <!--[ngTemplateOutlet]="singleTemplate"-->
-          <!--[ngTemplateOutletContext]="{ $implicit: item }">-->
-        <!--</ng-template>-->
+      <!--<ng-template-->
+      <!--[ngTemplateOutlet]="singleTemplate"-->
+      <!--[ngTemplateOutletContext]="{ $implicit: item }">-->
+      <!--</ng-template>-->
       <!--</ng-container>-->
-    <!--</ng-container>-->
+      <!--</ng-container>-->
 
-    <ng-container>
-      <ng-container *ngFor="let item of openOrders">
-        <ng-template
-          [ngTemplateOutlet]="singleTemplate"
-          [ngTemplateOutletContext]="{ $implicit: item }">
-        </ng-template>
+      <ng-container>
+        <ng-container *ngFor="let item of openOrders; trackBy: trackByFn">
+          <ng-template
+            [ngTemplateOutlet]="singleTemplate"
+            [ngTemplateOutletContext]="{ $implicit: item }"
+          >
+          </ng-template>
+        </ng-container>
       </ng-container>
-    </ng-container>
 
-    <tr class="table__row--mob" *ngIf="!openOrders?.length">
-      <td class="table__cell table__cell--tal" colspan="4">
-        {{'No matching records found'| translate}}
-      </td>
-    </tr>
-    <!-- t-row end-->
-  </tbody>
-</table>
+      <tr
+        class="table__row--mob"
+        *ngIf="!openOrders?.length"
+      >
+        <td
+          class="table__cell table__cell--tal"
+          colspan="4"
+        >
+          {{'No matching records found'| translate}}
+        </td>
+      </tr>
+      <!-- t-row end-->
+    </tbody>
+  </table>
 </cdk-virtual-scroll-viewport>
 
 <!--orders-mob end-->
 
-<ng-template #singleTemplate let-item>
-  <tr class="table__row--mob" (click)="toggleDetails(item)">
+<ng-template
+  #singleTemplate
+  let-item
+>
+  <tr
+    class="table__row--mob"
+    (click)="toggleDetails(item)"
+  >
     <td class="table__cell table__cell--tal">
       <div>{{item.currencyPairName}}</div>
       <div class="table__date-time">
@@ -58,8 +87,7 @@
     </td>
     <td class="table__cell table__cell--tal">
       <div>{{item.amountBase | currencyFormat}}</div>
-      <span
-        [ngClass]="{'orders__type-sell': item.operationTypeEnum === 'SELL',
+      <span [ngClass]="{'orders__type-sell': item.operationTypeEnum === 'SELL',
          'orders__type-buy': item.operationTypeEnum === 'BUY' }">
         {{item.operationType | replaceChar: '_': ' '}}
       </span>
@@ -68,11 +96,20 @@
       <span>{{(item.exExchangeRate || item.limitRate) | currencyFormat}}</span>
     </td>
     <td class="table__cell table__cell--arr-mob">
-      <img [ngClass]="{'img-rotate': selectedOrder && selectedOrder.id === item.id}" src="../../assets/img/arr-toggler-down-blue.svg">
+      <img
+        [ngClass]="{'img-rotate': selectedOrder && selectedOrder.id === item.id}"
+        src="../../assets/img/arr-toggler-down-blue.svg"
+      >
     </td>
   </tr>
-  <tr class="table__details" *ngIf="selectedOrder && selectedOrder.id === item.id">
-    <td class="table__details-cell" colspan="4">
+  <tr
+    class="table__details"
+    *ngIf="selectedOrder && selectedOrder.id === item.id"
+  >
+    <td
+      class="table__details-cell"
+      colspan="4"
+    >
 
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Order id' | translate}}</div>
@@ -84,7 +121,10 @@
           {{(item.exExchangeRate || item.limitRate) | currencyFormat}}
         </div>
       </div>
-      <div class="table__details-item" *ngIf="item.stopRate">
+      <div
+        class="table__details-item"
+        *ngIf="item.stopRate"
+      >
         <div class="table__details-item-title">{{'Stop Price' | translate}}</div>
         <div class="table__details-item-value">
           {{item.stopRate | currencyFormat}}
@@ -102,8 +142,7 @@
       </div>
       <div class="table__details-item">
         <div class="table__details-item-title">{{'Fee' | translate}}</div>
-        <div
-          class="table__details-item-value">
+        <div class="table__details-item-value">
           {{item.commissionFixedAmount| currencyFormat:arrPairName[1]}} {{arrPairName[1]}}
         </div>
       </div>
@@ -114,13 +153,21 @@
             style="width: 100%; max-width: 58px;"
             (click)="onShowCancelOrderConfirm(item.id)"
           >{{'Cancel' | translate}}</button>
-          <div class="revoke-request" *ngIf="showCancelOrderConfirm === item.id">
-            <div
-              class="revoke-request__title">{{'Are you sure you want to cancel selected order?' | translate}}</div>
+          <div
+            class="revoke-request"
+            *ngIf="showCancelOrderConfirm === item.id"
+          >
+            <div class="revoke-request__title">{{'Are you sure you want to cancel selected order?' | translate}}</div>
             <div class="revoke-request__button-wrap">
-              <button class="btn btn--small" [disabled]="loading"
-                      (click)="cancelOrder(item)">{{'Yes'| translate}}</button>
-              <button class="btn btn--small" (click)="onShowCancelOrderConfirm(null)">{{'No'| translate}}</button>
+              <button
+                class="btn btn--small"
+                [disabled]="loading"
+                (click)="cancelOrder(item)"
+              >{{'Yes'| translate}}</button>
+              <button
+                class="btn btn--small"
+                (click)="onShowCancelOrderConfirm(null)"
+              >{{'No'| translate}}</button>
             </div>
             <div class="revoke-request__triangle"></div>
           </div>
