--- a/src/app/dashboard/components/tools/tools.component.html
+++ b/src/app/dashboard/components/tools/tools.component.html
@@ -1,24 +1,51 @@
-
-<div class="dashboard-tools" style="width: 103px" (mouseenter)="showOverlay()" (mouseleave)="hideOverlay()" *ngIf="visibleToolsItems.length">
+<div
+  class="dashboard-tools"
+  style="width: 103px"
+  (mouseenter)="showOverlay()"
+  (mouseleave)="hideOverlay()"
+  *ngIf="visibleToolsItems.length"
+>
 
   <div class="dashboard-tools__header">
     {{"Tools" | translate}}
   </div>
   <perfect-scrollbar style="max-height: 90%;">
-  <div class="dashboard-tools__item" *ngFor="let item of visibleToolsItems"
-  (click)="addToDashboard(item.type)">
-    <div class="dashboard-tools__item-icon">
-      <img class="" src="{{item.imgUrl}}">
+    <div
+      class="dashboard-tools__item"
+      *ngFor="let item of visibleToolsItems; trackBy: trackByFn"
+      (click)="addToDashboard(item.type)"
+    >
+      <div class="dashboard-tools__item-icon">
+        <img
+          class=""
+          src="{{item.imgUrl}}"
+        >
+      </div>
+      <span class="dashboard-tools__item-name">{{item.name | translate}}</span>
     </div>
-    <span class="dashboard-tools__item-name">{{item.name | translate}}</span>
-  </div>
   </perfect-scrollbar>
   <div class="info-tools">
-    <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke="#ffffff" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+    <svg
+      width="17"
+      height="17"
+      viewBox="0 0 17 17"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272"
+        stroke="#ffffff"
+        stroke-width="3"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
     </svg>
-    <div class="tools-label" >{{visibleToolsItems.length}} {{visibleToolsItems.length > 1 ? ("Tools" | translate) : ("Tool" | translate)}}</div>
+    <div class="tools-label">{{visibleToolsItems.length}} {{visibleToolsItems.length > 1 ? ("Tools" | translate) : ("Tool" | translate)}}</div>
   </div>
 </div>
 
-<div class="overlay overlay-hide" #overlay [ngClass]="{'overlay-show': overlayShow}" ></div>
+<div
+  class="overlay overlay-hide"
+  #overlay
+  [ngClass]="{'overlay-show': overlayShow}"
+></div>
