--- a/src/app/funds/balance-details/balance-details.component.html
+++ b/src/app/funds/balance-details/balance-details.component.html
@@ -1,13 +1,22 @@
-
 <div class="container">
   <!--balance-mob start-->
   <div class="balance balance--mob balance-detail">
     <!--open mob-balance start-->
     <div class="open-mob-balance">
-      <div class="open-mob-balance__header" (click)="onGoBackToMain()">
-        <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div
+        class="open-mob-balance__header"
+        (click)="onGoBackToMain()"
+      >
+        <svg
+          width="9"
+          height="7"
+          viewBox="0 0 9 7"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
           <path
-            d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
+            d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"
+          />
         </svg>
         {{'to: All Balance' | translate}}
       </div>
@@ -19,46 +28,55 @@
           <div>
             <table class="table table--mob">
               <thead class="table__head">
-              <tr class="table__head-row">
-                <th class="table__cell-head table__cell-head--tal">{{'Currency' | translate}}</th>
-                <th class="table__cell-head table__cell-head--tal">{{'Available balance' | translate}}</th>
-                <th class="table__cell-head table__cell-head--tar">{{'Price' | translate}}</th>
-              </tr>
+                <tr class="table__head-row">
+                  <th class="table__cell-head table__cell-head--tal">{{'Currency' | translate}}</th>
+                  <th class="table__cell-head table__cell-head--tal">{{'Available balance' | translate}}</th>
+                  <th class="table__cell-head table__cell-head--tar">{{'Price' | translate}}</th>
+                </tr>
               </thead>
               <tbody class="table__body table__body--none-shadow">
 
-              <tr class="table__row--mob">
-                <td class="table__cell table__cell--tal">
-                  <div class="balance__currency">
-                    <div class="balance__currency-icon">
-                      <img [src]="selectedItem.currencyName | getIconUrl:true">
+                <tr class="table__row--mob">
+                  <td class="table__cell table__cell--tal">
+                    <div class="balance__currency">
+                      <div class="balance__currency-icon">
+                        <img [src]="selectedItem.currencyName | getIconUrl:true">
+                      </div>
+                      <div>
+                        <span>{{selectedItem.currencyName}}</span>
+                        <span class="balance__currency-name">{{selectedItem.currencyDescription}}</span>
+                      </div>
                     </div>
-                    <div>
-                      <span>{{selectedItem.currencyName}}</span>
-                      <span class="balance__currency-name">{{selectedItem.currencyDescription}}</span>
-                    </div>
-                  </div>
-                </td>
-                <td class="table__cell table__cell--tal">
-                  <span>{{selectedItem.activeBalance | currencyFormat}}</span>
-                </td>
-                <td class="table__cell table__cell--tar">
-                  <div *ngIf="priceIn === currencies.BTC">BTC {{selectedItem.btcAmount | currencyFormat}}</div>
-                  <div *ngIf="priceIn === currencies.USD">$ {{selectedItem.usdAmount | currencyFormat:'USD'}}</div>
-                  <!-- <span class="txt-small txt-red">–0.24%</span> -->
-                </td>
-              </tr>
-              <tr class="table__row--mob balance-button-row">
-                <td class="table__cell table__cell--tal">
-                  <button class="btn btn--center btn--small" (click)="goToCryptoDepositPopup(selectedItem)">{{'Deposit' | translate}}</button>
-                </td>
-                <td class="table__cell table__cell--tal">
-                  <button class="btn btn--center btn--small" (click)="goToCryptoWithdrawPopup(selectedItem)">{{'Withdraw' | translate}}</button>
-                </td>
-                <td class="table__cell table__cell--tar">
-                  <button class="btn btn--center btn--small" (click)="goToTransferPopup(selectedItem)">{{'Transfer' | translate}}</button>
-                </td>
-              </tr>
+                  </td>
+                  <td class="table__cell table__cell--tal">
+                    <span>{{selectedItem.activeBalance | currencyFormat}}</span>
+                  </td>
+                  <td class="table__cell table__cell--tar">
+                    <div *ngIf="priceIn === currencies.BTC">BTC {{selectedItem.btcAmount | currencyFormat}}</div>
+                    <div *ngIf="priceIn === currencies.USD">$ {{selectedItem.usdAmount | currencyFormat:'USD'}}</div>
+                    <!-- <span class="txt-small txt-red">–0.24%</span> -->
+                  </td>
+                </tr>
+                <tr class="table__row--mob balance-button-row">
+                  <td class="table__cell table__cell--tal">
+                    <button
+                      class="btn btn--center btn--small"
+                      (click)="goToCryptoDepositPopup(selectedItem)"
+                    >{{'Deposit' | translate}}</button>
+                  </td>
+                  <td class="table__cell table__cell--tal">
+                    <button
+                      class="btn btn--center btn--small"
+                      (click)="goToCryptoWithdrawPopup(selectedItem)"
+                    >{{'Withdraw' | translate}}</button>
+                  </td>
+                  <td class="table__cell table__cell--tar">
+                    <button
+                      class="btn btn--center btn--small"
+                      (click)="goToTransferPopup(selectedItem)"
+                    >{{'Transfer' | translate}}</button>
+                  </td>
+                </tr>
               </tbody>
             </table>
             <div class="open-mob-balance__row">
@@ -81,13 +99,30 @@
                 <div class="open-mob-balance__title">{{'On confirmation' | translate}}</div>
                 <div class="open-mob-balance__value">{{selectedItem.onConfirmation | currencyFormat}}</div>
                 <div class="open-mob-balance__arr">
-                  <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <svg
+                    width="10"
+                    height="6"
+                    viewBox="0 0 15 9"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
                   </svg>
                 </div>
               </div>
-              <div class="table__details" *ngIf="showOnConfirmation">
-                <div class="table__details-cell" *ngFor="let confirm of selectedItem.confirmations">
+              <div
+                class="table__details"
+                *ngIf="showOnConfirmation"
+              >
+                <div
+                  class="table__details-cell"
+                  *ngFor="let confirm of selectedItem.confirmations; trackBy: trackByFn"
+                >
                   <div class="table__details-item">
                     <div class="table__details-item-title">
                       <div class="counter">
@@ -101,13 +136,20 @@
                   <div class="table__details-item">
                     <div class="table__details-item-title">{{'Address' | translate}}</div>
                     <div class="table__details-item-value">
-                      <a href="#" class="open-mob-balance__code" disabled>{{confirm.address}}</a>
+                      <a
+                        href="#"
+                        class="open-mob-balance__code"
+                        disabled
+                      >{{confirm.address}}</a>
                     </div>
                   </div>
                   <div class="table__details-item">
                     <div class="table__details-item-title">{{'Txid' | translate}}</div>
                     <div class="table__details-item-value">
-                      <a href="#" class="open-mob-balance__code">{{confirm.hash}}</a>
+                      <a
+                        href="#"
+                        class="open-mob-balance__code"
+                      >{{confirm.hash}}</a>
                     </div>
                   </div>
                   <!-- <div class="table__details-item">
@@ -133,12 +175,26 @@
                 <div class="open-mob-balance__title">{{'Reserve' | translate}}</div>
                 <div class="open-mob-balance__value">{{selectedItem.reservedBalance | currencyFormat}}</div>
                 <div class="open-mob-balance__arr">
-                  <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <svg
+                    width="10"
+                    height="6"
+                    viewBox="0 0 15 9"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
                   </svg>
                 </div>
               </div>
-              <div class="table__details" *ngIf="showReserve">
+              <div
+                class="table__details"
+                *ngIf="showReserve"
+              >
                 <div class="table__details-cell">
                   <div class="table__details-item">
                     <div class="table__details-item-title">
