--- a/src/app/funds/balance/balance-table/balance-table.component.html
+++ b/src/app/funds/balance/balance-table/balance-table.component.html
@@ -1,99 +1,113 @@
-
 <table class="table">
-    <thead>
-      <tr>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'Available balance' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'Pending' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'In Withdraw' | translate}}</th>
-        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'In Orders' | translate}}</th>
-        <!-- <th class="table__cell-head table__cell-head--tar">Change %</th> -->
-        <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
-        <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
-        <th class="table__cell-head table__cell-head--tac">{{'Trade' | translate}}</th>
-        <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
-      </tr>
-    </thead>
-    <tbody class="table__body">
-      <tr
-        class="table__row balance__table-row"
-        *ngFor="let item of balances | paginate: {
-          itemsPerPage: countPerPage,
-          currentPage: currentPage,
-          totalItems: countOfEntries
-        }"
-      >
-        <td class="table__cell">
-          <div class="balance__currency">
-            <div class="balance__currency-icon">
-              <img [src]="item.currencyName | getIconUrl:true">
-            </div>
-            <span style="min-width: 70px;">{{item.currencyName}}</span>
-            <span class="balance__currency-name">{{item.currencyDescription}}</span>
+  <thead>
+    <tr>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'Available balance' | translate}}</th>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'Pending' | translate}}</th>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'In Withdraw' | translate}}</th>
+      <th class="table__cell-head table__cell-head--sort table__cell-head--tar">{{'In Orders' | translate}}</th>
+      <!-- <th class="table__cell-head table__cell-head--tar">Change %</th> -->
+      <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
+      <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th>
+      <th class="table__cell-head table__cell-head--tac">{{'Trade' | translate}}</th>
+      <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
+    </tr>
+  </thead>
+  <tbody class="table__body">
+    <tr
+      class="table__row balance__table-row"
+      *ngFor="let item of balances | paginate: {itemsPerPage: countPerPage, currentPage: currentPage, totalItems: countOfEntries}; trackBy: trackByFn"
+    >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img [src]="item.currencyName | getIconUrl:true">
           </div>
-        </td>
-        <td class="table__cell table__cell--tal">
-          <span>{{(+item.activeBalance + +item.reservedByOrders + +item.reservedByMerchant + +item.onConfirmation) | currencyFormat:item.currencyName}}</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>{{item.activeBalance | currencyFormat:item.currencyName}}</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>{{item.onConfirmation | currencyFormat:item.currencyName}}</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>{{item.reservedByMerchant | currencyFormat:item.currencyName}}</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>{{item.reservedByOrders | currencyFormat:item.currencyName}}</span>
-        </td>
-        <!-- <td class="table__cell table__cell--tar">
+          <span style="min-width: 70px;">{{item.currencyName}}</span>
+          <span class="balance__currency-name">{{item.currencyDescription}}</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tal">
+        <span>{{(+item.activeBalance + +item.reservedByOrders + +item.reservedByMerchant + +item.onConfirmation) | currencyFormat:item.currencyName}}</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>{{item.activeBalance | currencyFormat:item.currencyName}}</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>{{item.onConfirmation | currencyFormat:item.currencyName}}</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>{{item.reservedByMerchant | currencyFormat:item.currencyName}}</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>{{item.reservedByOrders | currencyFormat:item.currencyName}}</span>
+      </td>
+      <!-- <td class="table__cell table__cell--tar">
           <div class="balance__change">
             <span class="txt-green">7.8</span>
             <span class="arr arr--green"></span>
           </div>
         </td> -->
-        <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(item)">{{'Deposit' | translate}}</button>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(item)" >{{'Transfer' | translate}}</button>
-        </td>
-        <td class="table__cell">
-          <app-balance-table-trade-btn [allPairs]="allPairs" [item]="item"></app-balance-table-trade-btn>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(item)">{{'Withdraw' | translate}}</button>
-        </td>
-      </tr>
-      <tr class="table__row balance__table-row" *ngIf="!balances.length && !loading">
-        <td class="table__cell table__cell--tac" colspan="10">
-          {{'No matching records found' | translate}}
-        </td>
-      </tr>
-    </tbody>
-  </table>
+      <td class="table__cell">
+        <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          (click)="cryptoDepositOut.emit(item)"
+        >{{'Deposit' | translate}}</button>
+      </td>
+      <td class="table__cell">
+        <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          (click)="transferOut.emit(item)"
+        >{{'Transfer' | translate}}</button>
+      </td>
+      <td class="table__cell">
+        <app-balance-table-trade-btn
+          [allPairs]="allPairs"
+          [item]="item"
+        ></app-balance-table-trade-btn>
+      </td>
+      <td class="table__cell">
+        <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          (click)="cryptoWithdrawOut.emit(item)"
+        >{{'Withdraw' | translate}}</button>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      *ngIf="!balances.length && !loading"
+    >
+      <td
+        class="table__cell table__cell--tac"
+        colspan="10"
+      >
+        {{'No matching records found' | translate}}
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-  <!--paginator start-->
-  <div
-    class="row row--aic balance__paginator"
-    *ngIf="countOfEntries > countPerPage"
+<!--paginator start-->
+<div
+  class="row row--aic balance__paginator"
+  *ngIf="countOfEntries > countPerPage"
+>
+  <app-page-items-dropdown
+    [countPerPage]="countPerPage"
+    [countOfEntries]="countOfEntries"
+    (onChange)="changeItemsPerPage($event)"
+  ></app-page-items-dropdown>
+  <ul
+    class="paginator"
+    style="margin-left: auto;"
   >
-    <app-page-items-dropdown
-      [countPerPage]="countPerPage"
-      [countOfEntries]="countOfEntries"
-      (onChange)="changeItemsPerPage($event)"
-    ></app-page-items-dropdown>
-    <ul class="paginator" style="margin-left: auto;">
-      <pagination-controls
-        maxSize="7"
-        [previousLabel]="''"
-        [nextLabel]="''"
-        (pageChange)="changePage($event)"
-      ></pagination-controls>
-    </ul>
-  </div>
-  <!--paginator end-->
-
-
+    <pagination-controls
+      maxSize="7"
+      [previousLabel]="''"
+      [nextLabel]="''"
+      (pageChange)="changePage($event)"
+    ></pagination-controls>
+  </ul>
+</div>
+<!--paginator end-->
