DEVEX-3220 added details component

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -58,6 +58,7 @@
         (createQuberaAccount)="goToCreateQuberaAccountPopup($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
+        (goToQuberaDetails)="onGoToQuberaDetails($event)"
       ></app-qubera-mob>
 
       <app-ieo-table-mob
