--- a/src/app/funds/balance/qubera-mob/qubera-mob.component.html
+++ b/src/app/funds/balance/qubera-mob/qubera-mob.component.html
@@ -82,32 +82,32 @@
         </tr>
       </thead>
       <tbody class="table__body table__body--none-shadow">
-          <tr class="table__row--mob">
-            <td class="table__cell table__cell--tal">
-              <div class="balance__currency">
-                <div class="balance__currency-icon">
-                  <img src="assets/img/currency-icons/eur-white.svg">
-                </div>
-                <div>
-                  <span>{{balances.availableBalance?.currencyCode}}</span>
-                  <span class="balance__currency-name">Euro</span>
-                </div>
+        <tr class="table__row--mob" (click)="onShowMobDetails(EUR)">
+          <td class="table__cell table__cell--tal" >
+            <div class="balance__currency">
+              <div class="balance__currency-icon">
+                <img src="assets/img/currency-icons/eur-white.svg">
               </div>
-            </td>
-            <td class="table__cell table__cell--tal">
-              <span>{{balances.availableBalance?.amount}}</span>
-            </td>
-            <td class="table__cell table__cell--tar">
-              <span>{{balances.currentBalance?.amount}}</span>
-              <!-- <div *ngIf="priceIn === currencies.BTC">BTC 300</div>
-              <div *ngIf="priceIn === currencies.USD">$ 300</div> -->
-              <!-- <span class="txt-small txt-red">–0.24%</span> -->
-            </td>
-            <td class="table__cell table__cell--arr-mob">
-              <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </td>
+              <div>
+                <span>{{balances.availableBalance?.currencyCode}}</span>
+                <span class="balance__currency-name">Euro</span>
+              </div>
+            </div>
+          </td>
+          <td class="table__cell table__cell--tal">
+            <span>{{balances.availableBalance?.amount}}</span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span>{{balances.currentBalance?.amount}}</span>
+            <!-- <div *ngIf="priceIn === currencies.BTC">BTC 300</div>
+            <div *ngIf="priceIn === currencies.USD">$ 300</div> -->
+            <!-- <span class="txt-small txt-red">–0.24%</span> -->
+          </td>
+          <td class="table__cell table__cell--arr-mob">
+            <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </td>
           </tr>
           <tr>
             <td colspan="4">
